--- a/index.html
+++ b/index.html
@@ -156,8 +156,8 @@
                     <div class="text-indigo-100 text-sm font-bold uppercase tracking-wider">Avg Latency</div>
                 </div>
                 <div>
-                    <div class="text-4xl md:text-5xl font-black mb-2">200+</div>
-                    <div class="text-indigo-100 text-sm font-bold uppercase tracking-wider">Premium DSPs</div>
+                    <div class="text-4xl md:text-5xl font-black mb-2">50+</div>
+                    <div class="text-indigo-100 text-sm font-bold uppercase tracking-wider">Premium Demand Partners</div>
                 </div>
                 <div>
                     <div class="text-4xl md:text-5xl font-black mb-2">24/7</div>
