update Spider Solitaire game

--- a/spider-solitaire/index.html
+++ b/spider-solitaire/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>蜘蛛纸牌 Spider Solitaire</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./style.css?v=20260210">
 </head>
 <body>
     <div id="top-bar">
@@ -39,6 +39,6 @@
         </div>
     </div>
 
-    <script src="./main.js"></script>
+    <script src="./main.js?v=20260210"></script>
 </body>
 </html>
