update link param to disable cache

--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
                         </div>
                     </div>
                     <!-- Game 3: Royal Spider Solitaire (Updated Link) -->
-                    <a href="https://yuliang.net/spider-solitaire/index.html" class="group game-card clickable-card relative overflow-hidden rounded-3xl bg-gray-900 border border-gray-800 block">
+                    <a href="https://yuliang.net/spider-solitaire/index.html?v=20260210" class="group game-card clickable-card relative overflow-hidden rounded-3xl bg-gray-900 border border-gray-800 block">
                         <img src="https://images.unsplash.com/photo-1511512578047-dfb367046420?auto=format&fit=crop&q=80&w=800" alt="Card Game" class="w-full h-[300px] object-cover game-card-blur">
                         <div class="absolute inset-0 bg-black/40 flex flex-col items-center justify-center p-6 text-center transition-all group-hover:bg-black/20">
                             <span class="mb-4 px-4 py-1 bg-emerald-500 text-white text-xs font-black uppercase tracking-widest rounded-full shadow-lg">Play Demo</span>
